# paper-trail

./: .gitignore  README.md  app.py  metadata_store.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
paper_trail/: app.py  embedding.py  index_manager.py  metadata_store.py
paper_trail/utils/: logger.py
tests/: test_embedding.py  test_index_manager.py  test_metadata_store.py
