[project]
name = "paper-trail"
version = "0.1.0"
description = "Local semantic search desktop app"
requires-python = ">=3.11"

dependencies = [
    "pyqt5",
    "faiss-cpu",
    "sentence-transformers",
    "numpy",
    "pytest",
    "ruff"
]

[tool.ruff]
# Ignore ambiguous variable name warning
ignore = ["E741"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
